Implement GDPR-compliant discount system for affiliate program
- Added a new discount dialog component to facilitate the entry of affiliate codes during checkout.
- Introduced a memory-only storage mechanism for discount codes, ensuring no persistent data is stored in cookies or localStorage, in compliance with GDPR.
- Updated the purchase route to display the discount dialog instead of proceeding directly to checkout.
- Integrated real-time validation of affiliate codes and automatic application of a 10% discount via Stripe.
- Enhanced documentation to reflect changes in the affiliate program, including new environment variables and testing scenarios.

These updates aim to improve user experience while ensuring compliance with privacy regulations.

--- a/.env.sample
+++ b/.env.sample
@@ -10,6 +10,7 @@ NODE_ENV=development
 STRIPE_SECRET_KEY=your_stripe_secret_key
 STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
 STRIPE_PRICE_ID=your_stripe_price_id
+STRIPE_DISCOUNT_COUPON_ID=your_stripe_discount_coupon_id
 
 R2_ENDPOINT=
 R2_ACCESS_KEY_ID=
