Implement email composer feature with AWS SES integration
- Added a comprehensive email composition interface for administrators at `/admin/emails`, allowing bulk email sending with subject line validation and rich text content.
- Introduced functionality for managing user email preferences, including options for course updates and promotional emails.
- Implemented unsubscribe token generation and validation to comply with user preferences.
- Created necessary database tables and updated the schema to support email batch processing and user email preferences.
- Enhanced the admin interface with a new page layout and improved user experience elements.

These updates aim to provide a robust email marketing solution while ensuring compliance with user preferences and privacy regulations.

--- a/.env.sample
+++ b/.env.sample
@@ -24,3 +24,8 @@ MAILING_LIST_PASSWORD=CHANGE_ME
 
 VITE_RECAPTCHA_KEY=CHANGE_ME
 VITE_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
+
+FROM_EMAIL_ADDRESS="Agentic Jumpstart <no-reply@agenticjumpstart.com>"
+AWS_SES_ACCESS_KEY_ID=
+AWS_SES_SECRET_ACCESS_KEY=
+AWS_SES_REGION=us-east-1
