Add early access mode settings and Playwright test integration
- Introduced new app settings for managing early access mode, including functions to get and toggle the mode.
- Created a dedicated admin settings route for toggling early access mode with UI components.
- Implemented Playwright tests for early access functionality, ensuring proper redirection and access control based on user roles.
- Updated database setup to seed initial app settings and ensure test data integrity.

These changes enhance the application's feature management and improve testing coverage for critical user flows.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,19 @@
     "db:down": "docker compose down",
     "db:logs": "docker compose logs -f",
     "stripe:listen": "stripe listen --forward-to http://localhost:3000/api/stripe/webhook",
-    "upload:videos": "tsx ./scripts/upload-videos-to-r2.ts"
+    "upload:videos": "tsx ./scripts/upload-videos-to-r2.ts",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
+    "test:headed": "playwright test --headed",
+    "test:debug": "playwright test --debug",
+    "test:report": "playwright show-report",
+    "test:install": "playwright install",
+    "test:chrome": "playwright test --project=chromium",
+    "test:firefox": "playwright test --project=firefox",
+    "test:mobile": "playwright test --project='Mobile Chrome'",
+    "test:db:migrate": "tsx ./tests/setup/migrate-test.ts",
+    "test:db:setup": "tsx ./tests/setup/database.ts",
+    "test:no-webkit": "playwright test --config=playwright.config.no-webkit.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.850.0",
@@ -82,6 +94,7 @@
     "zod": "^4.0.10"
   },
   "devDependencies": {
+    "@playwright/test": "^1.54.2",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-router-devtools": "^1.130.2",
     "@types/js-cookie": "^3.0.6",
@@ -93,6 +106,7 @@
     "@types/react-google-recaptcha": "^2.1.9",
     "@types/sanitize-html": "^2.16.0",
     "drizzle-kit": "^0.31.4",
+    "playwright": "^1.54.2",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4"
