--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,18 @@ services:
     volumes:
       - postgres:/data/postgres
 
+  wdc-tanstack-starter-kit-db-test:
+    image: postgres:17
+    restart: always
+    container_name: wdc-tanstack-starter-kit-db-test
+    ports:
+      - 5433:5432
+    environment:
+      POSTGRES_PASSWORD: example
+      PGDATA: /data/postgres
+    volumes:
+      - postgres-test:/data/postgres
+
 volumes:
   postgres:
+  postgres-test:
