--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-hook-form": "^7.62.0",
     "react-markdown": "^10.1.0",
     "react-use": "^17.6.0",
+    "recharts": "^3.1.2",
     "redaxios": "^0.5.1",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
