--- a/cletus/package.json
+++ b/cletus/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vibert",
+  "name": "cletus",
   "type": "module",
   "version": "1.0.0",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "description": "",
   "dependencies": {
     "chalk": "^5.3.0",
