feat: introduce Cletus API v2.0.0 with modular architecture and comprehensive testing
- Added a new example environment configuration file (.env.example) for easier setup.
- Implemented a Bun test configuration file (bun.test.config.js) to streamline testing processes.
- Refactored the API structure into a modular design with dedicated endpoint files for jobs, batches, health checks, and system management.
- Enhanced logging and configuration management for better error handling and debugging.
- Introduced a new README.md detailing the features and quick start guide for the Cletus API.
- Updated package.json to reflect the new version and added relevant scripts for testing and development.

These changes significantly improve the maintainability and scalability of the Cletus API, providing a solid foundation for future enhancements.

--- a/cletus/extension/manifest.json
+++ b/cletus/extension/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 3,
-  "name": "Headless Claude Agent",
+  "name": "Cletus - The Headless Claude Extension",
   "version": "0.2.0",
-  "description": "Prompt your local headless Claude with page path and React components to kickstart feature work.",
+  "description": "Prompt your local headless Claude with page path and React components to kickstart feature work. Powered by Claude.",
   "action": {
-    "default_title": "Claude Agent",
+    "default_title": "Cletus",
     "default_popup": "popup.html"
   },
   "options_page": "options.html",
