feat: Enhance profile and segment functionalities
- Added flair support to user profiles, allowing for customizable visual indicators.
- Implemented transcript generation from video segments using OpenAI's Whisper API.
- Introduced new server routes for health checks and transcript generation.
- Updated various components to display flair and manage video completion status.
- Enhanced user profile access control based on public/private settings.

These changes improve user experience by providing personalized profile features and robust video content management.

--- a/.env.sample
+++ b/.env.sample
@@ -29,3 +29,5 @@ FROM_EMAIL_ADDRESS="Agentic Jumpstart <no-reply@agenticjumpstart.com>"
 AWS_SES_ACCESS_KEY_ID=
 AWS_SES_SECRET_ACCESS_KEY=
 AWS_SES_REGION=us-east-1
+
+OPENAI_API_KEY=
