feat: Add Kanban board HTML structure and integrate Tailwind CSS
- Introduced a new `example.html` file containing the foundational structure for a Kanban board, including necessary HTML elements and Tailwind CSS integration for styling.
- Updated `package.json` and `package-lock.json` to include `react-player` as a dependency for future video integration.
- Added a new design document for the glassmorphism dark theme to ensure consistent styling across the application.
- Implemented SQL migrations to enhance the database schema by adding `thumbnailKey` and `icon` columns to relevant tables, improving media management capabilities.

These changes lay the groundwork for a visually appealing and functional Kanban board, enhancing the overall user experience.

--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.62.0",
     "react-markdown": "^10.1.0",
+    "react-player": "^3.4.0",
     "react-use": "^17.6.0",
     "recharts": "^3.1.2",
     "redaxios": "^0.5.1",
