--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "test:firefox": "playwright test --project=firefox",
     "test:mobile": "playwright test --project='Mobile Chrome'",
     "test:db:setup": "tsx ./tests/setup/database.ts",
-    "test:no-webkit": "playwright test --config=playwright.config.no-webkit.ts"
+    "test:no-webkit": "playwright test --config=playwright.config.no-webkit.ts",
+    "test:unit": "vitest run",
+    "test:unit:watch": "vitest",
+    "test:unit:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.850.0",
@@ -40,6 +43,8 @@
     "@aws-sdk/s3-request-presigner": "^3.850.0",
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.2.1",
+    "@oslojs/crypto": "^1.0.1",
+    "@oslojs/encoding": "^1.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -72,6 +77,7 @@
     "drizzle-orm": "^0.44.3",
     "entities": "^6.0.1",
     "framer-motion": "^12.23.12",
+    "highlight.js": "^11.11.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.528.0",
     "marked": "^16.2.0",
@@ -112,10 +118,14 @@
     "@types/react-dom": "^19.1.6",
     "@types/react-google-recaptcha": "^2.1.9",
     "@types/sanitize-html": "^2.16.0",
+    "@vitejs/plugin-react": "^5.1.2",
+    "@vitest/coverage-v8": "^3.2.4",
+    "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.4",
     "playwright": "^1.54.2",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4"
   }
 }
