--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "@types/sanitize-html": "^2.16.0",
     "@vitejs/plugin-react": "^5.1.2",
     "@vitest/coverage-v8": "^3.2.4",
+    "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.4",
     "playwright": "^1.54.2",
