--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,7 @@
 name: Run Tests
 
 on:
+  workflow_dispatch:
   pull_request:
     branches: [main, develop]
   push:
@@ -36,7 +37,7 @@ jobs:
           cache: "npm"
 
       - name: Install dependencies
-        run: npm ci
+        run: rm -f package-lock.json && npm install
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
@@ -47,6 +48,7 @@ jobs:
           echo "IS_TEST=true" >> $GITHUB_ENV
           echo "PORT=3001" >> $GITHUB_ENV
           echo "HOST_NAME=http://localhost:3001" >> $GITHUB_ENV
+          echo "NODE_ENV=test" >> $GITHUB_ENV
 
       - name: Build application
         run: npm run build
