--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "dev": "npm run db:up && vite dev",
     "build": "vite build",
     "start": "npm run db:migrate && node .output/server/index.mjs",
-    "start:test": "npm run db:migrate:test && PORT=3001 HOST_NAME=http://localhost:3001 IS_TEST=true DATABASE_URL='postgresql://postgres:example@localhost:5433/postgres' vite dev",
+    "start:test": "npm run db:migrate:test && cross-env PORT=3001 HOST_NAME=http://localhost:3001 IS_TEST=true DATABASE_URL_TEST=postgresql://postgres:example@localhost:5433/postgres node .output/server/index.mjs",
     "db:push": "drizzle-kit push --config=drizzle.config.ts",
     "db:migrate": "tsx ./src/db/migrate.ts",
-    "db:migrate:test": "IS_TEST=true DATABASE_URL='postgresql://postgres:example@localhost:5433/postgres' tsx ./src/db/migrate.ts",
+    "db:migrate:test": "cross-env IS_TEST=true DATABASE_URL=postgresql://postgres:example@localhost:5433/postgres tsx ./src/db/migrate.ts",
     "db:generate": "drizzle-kit generate --config=drizzle.config.ts",
     "db:studio": "drizzle-kit studio",
     "db:clear": "tsx ./src/db/clear.ts",
