feat: Implement vector search and vectorization features for course transcripts
- Updated Docker configuration to use pgvector for PostgreSQL.
- Added new endpoints and UI components for vector search and vectorization in the admin panel.
- Implemented chunking and embedding generation for video transcripts.
- Created database schema for storing transcript chunks and embeddings.
- Developed use cases for vectorizing segments and searching transcripts using embeddings.
- Introduced admin-only access for vector search functionality.
- Enhanced pricing configuration and updated related components for consistency.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   wdc-tanstack-starter-kit-db:
-    image: postgres:17
+    image: pgvector/pgvector:pg17
     restart: always
     container_name: agentic-jumpstart-db
     ports:
@@ -12,7 +12,7 @@ services:
       - postgres:/data/postgres
 
   wdc-tanstack-starter-kit-db-test:
-    image: postgres:17
+    image: pgvector/pgvector:pg17
     restart: always
     container_name: wdc-tanstack-starter-kit-db-test
     ports:
