--- a/package.json
+++ b/package.json
@@ -75,12 +75,14 @@
     "drizzle-orm": "^0.44.3",
     "entities": "^6.0.1",
     "framer-motion": "^12.23.12",
+    "gpt-tokenizer": "^3.4.0",
     "highlight.js": "^11.11.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.528.0",
     "marked": "^16.2.0",
     "nitro": "^3.0.1-alpha.1",
     "nprogress": "^0.2.0",
+    "openai": "^6.15.0",
     "pg": "^8.16.3",
     "react": "^19.1.0",
     "react-confetti": "^6.4.0",
